--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile 'com.jakewharton.timber:timber:2.4.2'
     compile 'io.reactivex:rxandroid:0.25.0'
     compile 'io.reactivex:rxjava-math:0.21.0'
+    compile 'io.reactivex:rxjava-string:1.0.1'
 
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
