--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.fernandocejas.frodo'
 
 dependencies {
     compile  'com.android.support:support-v13:21.0.2'
@@ -22,6 +23,7 @@ dependencies {
 android {
     compileSdkVersion 21
     buildToolsVersion '21.1.2'
+    defaultPublishConfig "debug"
 
     defaultConfig {
         applicationId "com.morihacky.android.rxjava"
